dbase.output
Nonterminals useless in grammar

    parameter
    if_tail
    ident_name
    qualified_id
    path_tail
    class_command
    $@6
    $@7
    class_cmds


Terminals unused in grammar

    CMD_PARAMETER
    CMD_LOCAL
    CMD_PUBLIC
    CMD_PRIVATE
    CMD_PROTECTED
    CMD_NEW
    FILENAME


Rules useless in grammar

   67 if_tail: CMD_ENDIF
   68        | CMD_ELSE stmt_block CMD_ENDIF

   69 ident_name: CMD_ID
   70           | ident_name '.' CMD_ID

   71 qualified_id: CMD_ID
   72             | qualified_id '.' CMD_ID

   73 path_tail: '.' CMD_ID path_tail
   74          | ε

   75 $@6: ε

   76 $@7: ε

   77 class_command: CMD_CLASS CMD_ID CMD_OF CMD_ID $@6 class_cmds CMD_ENDCLASS $@7 class_command
   78              | ε

   79 class_cmds: class_command
   80           | ε


State 6 conflicts: 2 shift/reduce
State 28 conflicts: 2 shift/reduce
State 29 conflicts: 2 shift/reduce
State 52 conflicts: 2 shift/reduce
State 53 conflicts: 2 shift/reduce
State 54 conflicts: 2 shift/reduce
State 55 conflicts: 2 shift/reduce
State 56 conflicts: 12 shift/reduce
State 57 conflicts: 12 shift/reduce
State 58 conflicts: 2 shift/reduce
State 59 conflicts: 2 shift/reduce
State 60 conflicts: 2 shift/reduce
State 61 conflicts: 2 shift/reduce
State 62 conflicts: 2 shift/reduce
State 63 conflicts: 2 shift/reduce
State 75 conflicts: 2 shift/reduce
State 83 conflicts: 1 shift/reduce
State 85 conflicts: 2 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt: if_stmt
    3     | class_list

    4 class_list: class_list class_element
    5           | class_element

    6 stmt_list: stmt_list stmt
    7          | stmt

    8 expr_string: CMD_SQSTRING
    9            | CMD_DQSTRING
   10            | CMD_BLOCKSTRING

   11 if_stmt: CMD_IF expr stmt_block else_part CMD_ENDIF

   12 else_part: CMD_ELSE stmt_block
   13          | ε

   14 stmt_block: stmt_list
   15           | ε

   16 expr: CMD_NUMBER
   17     | qualified_access
   18     | string_literal
   19     | '(' expr ')'
   20     | expr '+' expr
   21     | expr '-' expr
   22     | expr '*' expr
   23     | expr '/' expr
   24     | expr CMD_EQ expr
   25     | expr CMD_NE expr
   26     | expr CMD_GE expr
   27     | expr CMD_LE expr
   28     | expr CMD_EG expr
   29     | expr CMD_EL expr
   30     | expr CMD_GT expr
   31     | expr CMD_LT expr
   32     | '-' expr
   33     | '+' expr

   34 string_literal: CMD_SQSTRING
   35               | CMD_DQSTRING

   36 value: string_literal
   37      | CMD_NUMBER
   38      | qualified_access

   39 class_element: class_def
   40              | with_statement

   41 $@1: ε

   42 class_def: CMD_CLASS CMD_ID CMD_OF CMD_FORM form_optional $@1 class_list_opt CMD_ENDCLASS

   43 form_optional: '(' CMD_ID ')'
   44              | ε

   45 class_list_opt: class_list
   46               | ε

   47 $@2: ε

   48 $@3: ε

   49 with_statement: CMD_WITH '(' qualified_access ')' $@2 with_block $@3 CMD_ENDWITH

   50 with_block: with_block with_element
   51           | with_element

   52 with_element: with_statement
   53             | assignment
   54             | ε

   55 $@4: ε

   56 qualified_access: CMD_ID $@4 access_tail

   57 access_tail: '.' CMD_ID access_tail
   58            | '(' ')' access_tail
   59            | '(' expr_list ')' access_tail
   60            | '[' expr ']' access_tail
   61            | ε

   62 expr_list: expr
   63          | expr ',' expr_list

   64 $@5: ε

   65 assignment: qualified_access $@5 CMD_ASSIGN value
   66           | CMD_ID CMD_ASSIGN expr_string


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 19 43 49 58 59
    ')' (41) 19 43 49 58 59
    '*' (42) 22
    '+' (43) 20 33
    ',' (44) 63
    '-' (45) 21 32
    '.' (46) 57
    '/' (47) 23
    '[' (91) 60
    ']' (93) 60
    error (256)
    CMD_NUMBER <str> (258) 16 37
    CMD_ID <str> (259) 42 43 56 57 66
    CMD_ASSIGN <str> (260) 65 66
    CMD_IF <str> (261) 11
    CMD_ELSE <str> (262) 12
    CMD_ENDIF <str> (263) 11
    CMD_NE <str> (264) 25
    CMD_EQ <str> (265) 24
    CMD_GT <str> (266) 30
    CMD_LT <str> (267) 31
    CMD_EG <str> (268) 28
    CMD_EL <str> (269) 29
    CMD_GE <str> (270) 26
    CMD_LE <str> (271) 27
    CMD_PARAMETER <val_keyword> (272)
    CMD_LOCAL <val_keyword> (273)
    CMD_PUBLIC <val_keyword> (274)
    CMD_PRIVATE <val_keyword> (275)
    CMD_PROTECTED <val_keyword> (276)
    CMD_SQSTRING <str> (277) 8 34
    CMD_DQSTRING <str> (278) 9 35
    CMD_BLOCKSTRING <str> (279) 10
    CMD_NEW <str> (280)
    CMD_OF <str> (281) 42
    CMD_FORM <str> (282) 42
    CMD_WITH <str> (283) 49
    CMD_ENDWITH <str> (284) 49
    CMD_CLASS <str> (285) 42
    CMD_ENDCLASS <str> (286) 42
    FILENAME <str> (287)
    UMINUS (288)
    UPLUS (289)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program (46)
        on left: 1
        on right: 0
    stmt <str> (47)
        on left: 2 3
        on right: 6 7
    class_list (48)
        on left: 4 5
        on right: 3 4 45
    stmt_list <str> (49)
        on left: 6 7
        on right: 1 6 14
    expr_string <str> (50)
        on left: 8 9 10
        on right: 66
    if_stmt <str> (51)
        on left: 11
        on right: 2
    else_part <str> (52)
        on left: 12 13
        on right: 11
    stmt_block <str> (53)
        on left: 14 15
        on right: 11 12
    expr <str> (54)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
        on right: 11 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 60 62 63
    string_literal <str> (55)
        on left: 34 35
        on right: 18 36
    value <str> (56)
        on left: 36 37 38
        on right: 65
    class_element (57)
        on left: 39 40
        on right: 4 5
    class_def <str> (58)
        on left: 42
        on right: 39
    $@1 (59)
        on left: 41
        on right: 42
    form_optional <str> (60)
        on left: 43 44
        on right: 42
    class_list_opt (61)
        on left: 45 46
        on right: 42
    with_statement <str> (62)
        on left: 49
        on right: 40 52
    $@2 (63)
        on left: 47
        on right: 49
    $@3 (64)
        on left: 48
        on right: 49
    with_block <str> (65)
        on left: 50 51
        on right: 49 50
    with_element <str> (66)
        on left: 52 53 54
        on right: 50 51
    qualified_access <str> (67)
        on left: 56
        on right: 17 38 49 65
    $@4 (68)
        on left: 55
        on right: 56
    access_tail <str> (69)
        on left: 57 58 59 60 61
        on right: 56 57 58 59 60
    expr_list <str> (70)
        on left: 62 63
        on right: 59 63
    assignment (71)
        on left: 65 66
        on right: 53
    $@5 (72)
        on left: 64
        on right: 65


State 0

    0 $accept: • program $end

    CMD_IF     shift, and go to state 1
    CMD_WITH   shift, and go to state 2
    CMD_CLASS  shift, and go to state 3

    program         go to state 4
    stmt            go to state 5
    class_list      go to state 6
    stmt_list       go to state 7
    if_stmt         go to state 8
    class_element   go to state 9
    class_def       go to state 10
    with_statement  go to state 11


State 1

   11 if_stmt: CMD_IF • expr stmt_block else_part CMD_ENDIF

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 19
    string_literal    go to state 20
    qualified_access  go to state 21


State 2

   49 with_statement: CMD_WITH • '(' qualified_access ')' $@2 with_block $@3 CMD_ENDWITH

    '('  shift, and go to state 22


State 3

   42 class_def: CMD_CLASS • CMD_ID CMD_OF CMD_FORM form_optional $@1 class_list_opt CMD_ENDCLASS

    CMD_ID  shift, and go to state 23


State 4

    0 $accept: program • $end

    $end  shift, and go to state 24


State 5

    7 stmt_list: stmt •

    $default  reduce using rule 7 (stmt_list)


State 6

    3 stmt: class_list •
    4 class_list: class_list • class_element

    CMD_WITH   shift, and go to state 2
    CMD_CLASS  shift, and go to state 3

    CMD_WITH   [reduce using rule 3 (stmt)]
    CMD_CLASS  [reduce using rule 3 (stmt)]
    $default   reduce using rule 3 (stmt)

    class_element   go to state 25
    class_def       go to state 10
    with_statement  go to state 11


State 7

    1 program: stmt_list •
    6 stmt_list: stmt_list • stmt

    CMD_IF     shift, and go to state 1
    CMD_WITH   shift, and go to state 2
    CMD_CLASS  shift, and go to state 3

    $default  reduce using rule 1 (program)

    stmt            go to state 26
    class_list      go to state 6
    if_stmt         go to state 8
    class_element   go to state 9
    class_def       go to state 10
    with_statement  go to state 11


State 8

    2 stmt: if_stmt •

    $default  reduce using rule 2 (stmt)


State 9

    5 class_list: class_element •

    $default  reduce using rule 5 (class_list)


State 10

   39 class_element: class_def •

    $default  reduce using rule 39 (class_element)


State 11

   40 class_element: with_statement •

    $default  reduce using rule 40 (class_element)


State 12

   16 expr: CMD_NUMBER •

    $default  reduce using rule 16 (expr)


State 13

   56 qualified_access: CMD_ID • $@4 access_tail

    $default  reduce using rule 55 ($@4)

    $@4  go to state 27


State 14

   34 string_literal: CMD_SQSTRING •

    $default  reduce using rule 34 (string_literal)


State 15

   35 string_literal: CMD_DQSTRING •

    $default  reduce using rule 35 (string_literal)


State 16

   33 expr: '+' • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 28
    string_literal    go to state 20
    qualified_access  go to state 21


State 17

   32 expr: '-' • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 29
    string_literal    go to state 20
    qualified_access  go to state 21


State 18

   19 expr: '(' • expr ')'

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 30
    string_literal    go to state 20
    qualified_access  go to state 21


State 19

   11 if_stmt: CMD_IF expr • stmt_block else_part CMD_ENDIF
   20 expr: expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr

    CMD_IF     shift, and go to state 1
    CMD_NE     shift, and go to state 31
    CMD_EQ     shift, and go to state 32
    CMD_GT     shift, and go to state 33
    CMD_LT     shift, and go to state 34
    CMD_EG     shift, and go to state 35
    CMD_EL     shift, and go to state 36
    CMD_GE     shift, and go to state 37
    CMD_LE     shift, and go to state 38
    CMD_WITH   shift, and go to state 2
    CMD_CLASS  shift, and go to state 3
    '+'        shift, and go to state 39
    '-'        shift, and go to state 40
    '*'        shift, and go to state 41
    '/'        shift, and go to state 42

    $default  reduce using rule 15 (stmt_block)

    stmt            go to state 5
    class_list      go to state 6
    stmt_list       go to state 43
    if_stmt         go to state 8
    stmt_block      go to state 44
    class_element   go to state 9
    class_def       go to state 10
    with_statement  go to state 11


State 20

   18 expr: string_literal •

    $default  reduce using rule 18 (expr)


State 21

   17 expr: qualified_access •

    $default  reduce using rule 17 (expr)


State 22

   49 with_statement: CMD_WITH '(' • qualified_access ')' $@2 with_block $@3 CMD_ENDWITH

    CMD_ID  shift, and go to state 13

    qualified_access  go to state 45


State 23

   42 class_def: CMD_CLASS CMD_ID • CMD_OF CMD_FORM form_optional $@1 class_list_opt CMD_ENDCLASS

    CMD_OF  shift, and go to state 46


State 24

    0 $accept: program $end •

    $default  accept


State 25

    4 class_list: class_list class_element •

    $default  reduce using rule 4 (class_list)


State 26

    6 stmt_list: stmt_list stmt •

    $default  reduce using rule 6 (stmt_list)


State 27

   56 qualified_access: CMD_ID $@4 • access_tail

    '('  shift, and go to state 47
    '.'  shift, and go to state 48
    '['  shift, and go to state 49

    $default  reduce using rule 61 (access_tail)

    access_tail  go to state 50


State 28

   20 expr: expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr
   33     | '+' expr •

    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36

    CMD_EG    [reduce using rule 33 (expr)]
    CMD_EL    [reduce using rule 33 (expr)]
    $default  reduce using rule 33 (expr)


State 29

   20 expr: expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr
   32     | '-' expr •

    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36

    CMD_EG    [reduce using rule 32 (expr)]
    CMD_EL    [reduce using rule 32 (expr)]
    $default  reduce using rule 32 (expr)


State 30

   19 expr: '(' expr • ')'
   20     | expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr

    CMD_NE  shift, and go to state 31
    CMD_EQ  shift, and go to state 32
    CMD_GT  shift, and go to state 33
    CMD_LT  shift, and go to state 34
    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36
    CMD_GE  shift, and go to state 37
    CMD_LE  shift, and go to state 38
    '+'     shift, and go to state 39
    '-'     shift, and go to state 40
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42
    ')'     shift, and go to state 51


State 31

   25 expr: expr CMD_NE • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 52
    string_literal    go to state 20
    qualified_access  go to state 21


State 32

   24 expr: expr CMD_EQ • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 53
    string_literal    go to state 20
    qualified_access  go to state 21


State 33

   30 expr: expr CMD_GT • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 54
    string_literal    go to state 20
    qualified_access  go to state 21


State 34

   31 expr: expr CMD_LT • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 55
    string_literal    go to state 20
    qualified_access  go to state 21


State 35

   28 expr: expr CMD_EG • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 56
    string_literal    go to state 20
    qualified_access  go to state 21


State 36

   29 expr: expr CMD_EL • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 57
    string_literal    go to state 20
    qualified_access  go to state 21


State 37

   26 expr: expr CMD_GE • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 58
    string_literal    go to state 20
    qualified_access  go to state 21


State 38

   27 expr: expr CMD_LE • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 59
    string_literal    go to state 20
    qualified_access  go to state 21


State 39

   20 expr: expr '+' • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 60
    string_literal    go to state 20
    qualified_access  go to state 21


State 40

   21 expr: expr '-' • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 61
    string_literal    go to state 20
    qualified_access  go to state 21


State 41

   22 expr: expr '*' • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 62
    string_literal    go to state 20
    qualified_access  go to state 21


State 42

   23 expr: expr '/' • expr

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 63
    string_literal    go to state 20
    qualified_access  go to state 21


State 43

    6 stmt_list: stmt_list • stmt
   14 stmt_block: stmt_list •

    CMD_IF     shift, and go to state 1
    CMD_WITH   shift, and go to state 2
    CMD_CLASS  shift, and go to state 3

    $default  reduce using rule 14 (stmt_block)

    stmt            go to state 26
    class_list      go to state 6
    if_stmt         go to state 8
    class_element   go to state 9
    class_def       go to state 10
    with_statement  go to state 11


State 44

   11 if_stmt: CMD_IF expr stmt_block • else_part CMD_ENDIF

    CMD_ELSE  shift, and go to state 64

    $default  reduce using rule 13 (else_part)

    else_part  go to state 65


State 45

   49 with_statement: CMD_WITH '(' qualified_access • ')' $@2 with_block $@3 CMD_ENDWITH

    ')'  shift, and go to state 66


State 46

   42 class_def: CMD_CLASS CMD_ID CMD_OF • CMD_FORM form_optional $@1 class_list_opt CMD_ENDCLASS

    CMD_FORM  shift, and go to state 67


State 47

   58 access_tail: '(' • ')' access_tail
   59            | '(' • expr_list ')' access_tail

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18
    ')'           shift, and go to state 68

    expr              go to state 69
    string_literal    go to state 20
    qualified_access  go to state 21
    expr_list         go to state 70


State 48

   57 access_tail: '.' • CMD_ID access_tail

    CMD_ID  shift, and go to state 71


State 49

   60 access_tail: '[' • expr ']' access_tail

    CMD_NUMBER    shift, and go to state 12
    CMD_ID        shift, and go to state 13
    CMD_SQSTRING  shift, and go to state 14
    CMD_DQSTRING  shift, and go to state 15
    '+'           shift, and go to state 16
    '-'           shift, and go to state 17
    '('           shift, and go to state 18

    expr              go to state 72
    string_literal    go to state 20
    qualified_access  go to state 21


State 50

   56 qualified_access: CMD_ID $@4 access_tail •

    $default  reduce using rule 56 (qualified_access)


State 51

   19 expr: '(' expr ')' •

    $default  reduce using rule 19 (expr)


State 52

   20 expr: expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   25     | expr CMD_NE expr •
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr

    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36
    '+'     shift, and go to state 39
    '-'     shift, and go to state 40
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42

    CMD_EG    [reduce using rule 25 (expr)]
    CMD_EL    [reduce using rule 25 (expr)]
    $default  reduce using rule 25 (expr)


State 53

   20 expr: expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   24     | expr CMD_EQ expr •
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr

    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36
    '+'     shift, and go to state 39
    '-'     shift, and go to state 40
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42

    CMD_EG    [reduce using rule 24 (expr)]
    CMD_EL    [reduce using rule 24 (expr)]
    $default  reduce using rule 24 (expr)


State 54

   20 expr: expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   30     | expr CMD_GT expr •
   31     | expr • CMD_LT expr

    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36
    '+'     shift, and go to state 39
    '-'     shift, and go to state 40
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42

    CMD_EG    [reduce using rule 30 (expr)]
    CMD_EL    [reduce using rule 30 (expr)]
    $default  reduce using rule 30 (expr)


State 55

   20 expr: expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr
   31     | expr CMD_LT expr •

    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36
    '+'     shift, and go to state 39
    '-'     shift, and go to state 40
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42

    CMD_EG    [reduce using rule 31 (expr)]
    CMD_EL    [reduce using rule 31 (expr)]
    $default  reduce using rule 31 (expr)


State 56

   20 expr: expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   28     | expr CMD_EG expr •
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr

    CMD_NE  shift, and go to state 31
    CMD_EQ  shift, and go to state 32
    CMD_GT  shift, and go to state 33
    CMD_LT  shift, and go to state 34
    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36
    CMD_GE  shift, and go to state 37
    CMD_LE  shift, and go to state 38
    '+'     shift, and go to state 39
    '-'     shift, and go to state 40
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42

    CMD_NE    [reduce using rule 28 (expr)]
    CMD_EQ    [reduce using rule 28 (expr)]
    CMD_GT    [reduce using rule 28 (expr)]
    CMD_LT    [reduce using rule 28 (expr)]
    CMD_EG    [reduce using rule 28 (expr)]
    CMD_EL    [reduce using rule 28 (expr)]
    CMD_GE    [reduce using rule 28 (expr)]
    CMD_LE    [reduce using rule 28 (expr)]
    '+'       [reduce using rule 28 (expr)]
    '-'       [reduce using rule 28 (expr)]
    '*'       [reduce using rule 28 (expr)]
    '/'       [reduce using rule 28 (expr)]
    $default  reduce using rule 28 (expr)


State 57

   20 expr: expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   29     | expr CMD_EL expr •
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr

    CMD_NE  shift, and go to state 31
    CMD_EQ  shift, and go to state 32
    CMD_GT  shift, and go to state 33
    CMD_LT  shift, and go to state 34
    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36
    CMD_GE  shift, and go to state 37
    CMD_LE  shift, and go to state 38
    '+'     shift, and go to state 39
    '-'     shift, and go to state 40
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42

    CMD_NE    [reduce using rule 29 (expr)]
    CMD_EQ    [reduce using rule 29 (expr)]
    CMD_GT    [reduce using rule 29 (expr)]
    CMD_LT    [reduce using rule 29 (expr)]
    CMD_EG    [reduce using rule 29 (expr)]
    CMD_EL    [reduce using rule 29 (expr)]
    CMD_GE    [reduce using rule 29 (expr)]
    CMD_LE    [reduce using rule 29 (expr)]
    '+'       [reduce using rule 29 (expr)]
    '-'       [reduce using rule 29 (expr)]
    '*'       [reduce using rule 29 (expr)]
    '/'       [reduce using rule 29 (expr)]
    $default  reduce using rule 29 (expr)


State 58

   20 expr: expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   26     | expr CMD_GE expr •
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr

    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36
    '+'     shift, and go to state 39
    '-'     shift, and go to state 40
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42

    CMD_EG    [reduce using rule 26 (expr)]
    CMD_EL    [reduce using rule 26 (expr)]
    $default  reduce using rule 26 (expr)


State 59

   20 expr: expr • '+' expr
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   27     | expr CMD_LE expr •
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr

    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36
    '+'     shift, and go to state 39
    '-'     shift, and go to state 40
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42

    CMD_EG    [reduce using rule 27 (expr)]
    CMD_EL    [reduce using rule 27 (expr)]
    $default  reduce using rule 27 (expr)


State 60

   20 expr: expr • '+' expr
   20     | expr '+' expr •
   21     | expr • '-' expr
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr

    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42

    CMD_EG    [reduce using rule 20 (expr)]
    CMD_EL    [reduce using rule 20 (expr)]
    $default  reduce using rule 20 (expr)


State 61

   20 expr: expr • '+' expr
   21     | expr • '-' expr
   21     | expr '-' expr •
   22     | expr • '*' expr
   23     | expr • '/' expr
   24     | expr • CMD_EQ expr
   25     | expr • CMD_NE expr
   26     | expr • CMD_GE expr
   27     | expr • CMD_LE expr
   28     | expr • CMD_EG expr
   29     | expr • CMD_EL expr
   30     | expr • CMD_GT expr
   31     | expr • CMD_LT expr

    CMD_EG  shift, and go to state 35
    CMD_EL  shift, and go to state 36
    '*'     shift, and go to state 41
    '/'     shift, and go to state 42

    CMD_EG    [reduce using rule 21 (expr)]
    CMD_EL    [reduce using rule 21 (expr)]
    $default  reduce using rule 21 (expr)


State 62
